// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Input ui addon default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <div
      class="input-group"
    >
      <span
        class="input-group-text"
      >
        Default on the left
      </span>
      <input
        aria-label="First name"
        class="form-control"
        id="6"
        type="text"
        value=""
      />
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: Input ui default 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <input
      aria-label="First name"
      class="form-control"
      id="1"
      type="text"
      value=""
    />
    Some error
  </div>
</div>
`;

exports[`Component: Input ui visible label 1`] = `
<div>
  <div
    class="mb-3"
    color="success"
  >
    <label
      class="form-label"
      for="firstName"
    >
      First name
    </label>
    <input
      class="form-control"
      id="firstName"
      type="text"
      value=""
    />
    Some error
  </div>
</div>
`;

exports[`reactStrapInput 1`] = `
<div>
  <input
    class="form-control"
    id="10"
    type="text"
  />
</div>
`;
